--- a/paginas/Artigos/styles/style.css
+++ b/paginas/Artigos/styles/style.css
@@ -146,6 +146,28 @@ li a {
     max-width: 500px;
 }
 
+.stars {
+    margin-top: 15px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.yellow {
+    color: #FFD700;
+}
+
+.black {
+    color: black;
+    opacity: 0.2;
+}
+
+@media screen and (max-width: 1024px) {
+    .stars {
+        bottom: 25px;
+    }
+}
+
 @media screen and (min-width: 992px) {
     #img_Control {
         max-width: 230px;
