--- a/paginas/Calendario/main.css
+++ b/paginas/Calendario/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("Images/fundo_Login.png");
+    background-image: url("/Planejy/paginas/Calendario/images/fundo_Login.png");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
