--- a/paginas/Login/styles/style.css
+++ b/paginas/Login/styles/style.css
@@ -14,7 +14,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    background-image: url("../images/fundo_Login.png");
+    background-image: url("/Planejy/paginas/Login/images/fundo_Login.png");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
