--- a/modulo_frontend/Pages/Calendario/main.css
+++ b/modulo_frontend/Pages/Calendario/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 .scrollbar-near-moon::-webkit-scrollbar-track {
-    background-color: #f5f5f575;
+    background-color: #ffffff33;
     border-radius: 20px;
 }
 
@@ -19,7 +19,7 @@ body {
     border-radius: 20px;
     background-image: -webkit-gradient(linear, left bottom, left top, from(#8aa3c4), to(#8b73ac));
     background-image: -webkit-linear-gradient(bottom, #8aa3c4 0%, #8b73ac 100%);
-    background-image: linear-gradient(to top, #8aa3c4 0%, #8b73ac 100%);
+    background-image: linear-gradient(to top, #658ec4b6 0%, #6a5186c4 100%);
 }
 
 .square::-webkit-scrollbar-track {
@@ -68,7 +68,7 @@ body {
 }
 
 .fundoBranco {
-    background-color: #f9f7fbe3 !important;
+    background-color: #f9f7fbd3 !important;
 }
 
 .fundoClaro {
@@ -732,7 +732,7 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
 
 .fc .fc-non-business {
     background: #efddef;
-    background: var(--fc-non-business-color, #efddef);
+    background: var(--fc-non-business-color, #dfe3f1);
 }
 
 .fc .fc-bg-event {
@@ -751,13 +751,13 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
 
 .fc .fc-highlight {
     background: #e8e3ee81;
-    background: var(--fc-highlight-color, #e8e3ee81);
+    background: var(--fc-highlight-color, #d3d5ee94);
 }
 
 .fc .fc-cell-shaded,
 .fc .fc-day-disabled {
     background: rgba(208, 208, 208, 0.3);
-    background: var(--fc-neutral-bg-color, rgba(208, 208, 208, 0.3));
+    background: var(--fc-neutral-bg-color, #d0d0d0fa);
 }
 
 
@@ -1082,8 +1082,8 @@ A HORIZONTAL event
 }
 
 .fc .fc-daygrid-day.fc-day-today {
-    background-color: #6fc6ee49 !important;
-    background-color: var(--fc-today-bg-color, #6fc6ee49) !important;
+    background-color: #909de43d !important;
+    background-color: var(#909de43d, #909de43d) !important;
 }
 
 .fc .fc-daygrid-day-frame {
@@ -1521,8 +1521,8 @@ A VERTICAL event
 }
 
 .fc .fc-timegrid-col.fc-day-today {
-    background-color: #6fc6ee49;
-    background-color: var(--fc-today-bg-color, #6fc6ee49);
+    background-color: #909de43d !important;
+    background-color: var(#909de43d, #909de43d) !important;
 }
 
 .fc .fc-timegrid-col-frame {
@@ -1920,12 +1920,12 @@ A VERTICAL event
     }
 }
 
-#rr{
+#rr {
     text-decoration: none;
     color: #212529;
 }
 
-#rr:hover{
+#rr:hover {
     cursor: default;
 }
 
