--- a/modulo_frontend/Pages/Login/styles/style.css
+++ b/modulo_frontend/Pages/Login/styles/style.css
@@ -21,6 +21,10 @@ body {
     background-size: cover;
 }
 
+main {
+    background-color: rgba(190, 217, 229, 0.425);
+}
+
 * {
     font-family: 'Poppins', sans-serif;
 }
