botao excluir configuracoes

--- a/modulo_frontend/Pages/Calendario/main.css
+++ b/modulo_frontend/Pages/Calendario/main.css
@@ -1951,7 +1951,7 @@ A VERTICAL event
 }
 
 #btnDelet2 {
-    background: #302d38;
+    background: #3a3742;
     color: white;
     border-color: #0b0b0e;
 }
