--- a/modulo_frontend/Pages/Calendario/main.css
+++ b/modulo_frontend/Pages/Calendario/main.css
@@ -71,6 +71,10 @@ body {
     background-color: #f9f7fbd3 !important;
 }
 
+.fundoNotas {
+    background-color: white;
+}
+
 .fundoClaro {
     background-color: #e8e3eef8 !important;
 }
