--- a/modulo_frontend/Pages/Profissionais/styles/style.css
+++ b/modulo_frontend/Pages/Profissionais/styles/style.css
@@ -81,6 +81,10 @@ h1 {
     border-color: #ffffff3b !important;
 }
 
+.fundoNotas {
+    background-color: white;
+}
+
 .inner_content {
     padding: 20px 2vw;
 }
