--- a/modulo_frontend/Pages/Artigos_inside/styles/style.css
+++ b/modulo_frontend/Pages/Artigos_inside/styles/style.css
@@ -16,6 +16,10 @@ h1 {
     color: black;
 }
 
+.fundoNotas {
+    background-color: white;
+}
+
 .card {
     background-color: #f9f7fbd5 !important;
 }
