added pro ratings animations

--- a/modulo_frontend/Pages/Profissionais/styles/style.css
+++ b/modulo_frontend/Pages/Profissionais/styles/style.css
@@ -197,7 +197,7 @@ li a {
 
 .rating {
     display: flex;
-    flex-direction: row-reverse;
+    /* flex-direction: row-reverse; */
     justify-content: right;
     margin-top: -10px;
 }
@@ -223,7 +223,7 @@ li a {
     opacity: 0;
     z-index: 9999;
 }
-
+/* 
 .rating>label:hover:before,
 .rating>label:hover~label:before {
     opacity: 1 !important;
@@ -235,7 +235,7 @@ li a {
 
 .rating:hover>input:checked~label:before {
     opacity: 0.4;
-}
+} */
 
 .n_votos {
     text-align: right;
