--- a/modulo_frontend/Pages/Profissionais/styles/style.css
+++ b/modulo_frontend/Pages/Profissionais/styles/style.css
@@ -16,6 +16,29 @@ h1 {
     color: black;
 }
 
+.premium-shadow {
+    box-shadow: 0 0 15px #9b7b376c;
+    animation: glowing 4s infinite;
+}
+
+
+/* Chrome, Safari, Opera */
+
+@-webkit-keyframes glowing {
+    50% {
+        box-shadow: 0px 0px 20px #e2b728cc;
+    }
+}
+
+
+/* Standard syntax */
+
+@keyframes glowing {
+    50% {
+        box-shadow: 0px 0px 20px #e2b728cc;
+    }
+}
+
 #msg {
     height: 60px;
 }
@@ -223,6 +246,8 @@ li a {
     opacity: 0;
     z-index: 9999;
 }
+
+
 /* 
 .rating>label:hover:before,
 .rating>label:hover~label:before {
@@ -245,14 +270,14 @@ li a {
 
 /* fim das estrelas */
 
-.cards-box .card{
+.cards-box .card {
     z-index: 999;
-    transition-duration: 0.2s; 
-    transition-property: all; 
+    transition-duration: 0.2s;
+    transition-property: all;
     transition-timing-function: ease;
 }
 
-.cards-box .card:hover{
+.cards-box .card:hover {
     transform: scale(1.05);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
