--- a/modulo_frontend/Pages/Profissionais/styles/style.css
+++ b/modulo_frontend/Pages/Profissionais/styles/style.css
@@ -26,7 +26,7 @@ h1 {
 
 @-webkit-keyframes glowing {
     50% {
-        box-shadow: 0px 0px 20px #e2b728b0;
+        box-shadow: 0px 0px 28px #e2b728b0;
     }
 }
 
@@ -35,7 +35,22 @@ h1 {
 
 @keyframes glowing {
     50% {
-        box-shadow: 0px 0px 20px #e2b728ab;
+        box-shadow: 0px 0px 28px #e2b728ab;
+    }
+}
+
+@-webkit-keyframes glowing-award {
+    50% {
+        text-shadow: 0px 0px 25px #ffc400c7;
+    }
+}
+
+
+/* Standard syntax */
+
+@keyframes glowing-award {
+    50% {
+        text-shadow: 0px 0px 25px #ffc400d0;
     }
 }
 
@@ -282,8 +297,15 @@ li a {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.bi-award-fill {
+    color: #DAA520;
+    float: right;
+    animation: glowing-award 4s infinite;
+    font-size: larger;
+}
+
 .nome {
-    margin: 0px;
+    padding-bottom: 5px;
 }
 
 .area {
