--- a/modulo_frontend/Pages/Calendario/ghost.css
+++ b/modulo_frontend/Pages/Calendario/ghost.css
@@ -1,21 +1,18 @@
 #ghost {
     --ghostXPos: 0px;
     --ghostYPos: 0px;
-
     transform: translate3d(var(--ghostXPos), var(--ghostYPos), 0);
-        
     position: fixed;
     left: 20px;
     top: 10px;
     z-index: 1000;
     pointer-events: none;
-        
     transition: .2s ease-out opacity;
 }
 
 #ghostImage {
     animation: ghostBounce 5s ease-in-out infinite;
-    filter: drop-shadow(0px 2px 10px var(--darkStructureBorder));
+    filter: drop-shadow(0px 2px 10px #a576da);
 }
 
 #ghostOuter {
@@ -26,11 +23,9 @@
     0% {
         transform: translateX(-20px);
     }
-
     50% {
         transform: translateX(20px);
     }
-
     100% {
         transform: translateX(-20px);
     }
@@ -40,11 +35,9 @@
     0% {
         transform: translateY(-20px);
     }
-
     50% {
         transform: translateY(20px);
     }
-
     100% {
         transform: translateY(-20px);
     }
