--- a/modulo_frontend/Pages/Calendario/ghost.css
+++ b/modulo_frontend/Pages/Calendario/ghost.css
@@ -1,6 +1,9 @@
 #ghost {
     --ghostXPos: 0px;
     --ghostYPos: 0px;
+    --darkText: #f1ede3dc;
+    --light: #805ebe94;
+    --ghostShadow: #a576dal;
     transform: translate3d(var(--ghostXPos), var(--ghostYPos), 0);
     position: fixed;
     left: 20px;
@@ -12,7 +15,7 @@
 
 #ghostImage {
     animation: ghostBounce 5s ease-in-out infinite;
-    filter: drop-shadow(0px 2px 10px #a576da);
+    filter: drop-shadow(0px 2px 10px var(--ghostShadow));
 }
 
 #ghostOuter {
